# thnn_test

./: CMakeLists.txt  THNN.h  init.c  main.c
TH/: CMakeLists.txt  THGeneral.h
TH/cmake/: FindBLAS.cmake
test/: test.c  torch_test.py
utils/: CMakeLists.txt  helperFunctions.c  helperFunctions.h
